syntax = "proto3";

option csharp_namespace = "CustomGrpcBackend.Protos";

package user;

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc StreamUsers (StreamUsersRequest) returns (stream UserResponse);
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string created_at = 4;
  string updated_at = 5;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message UpdateUserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message StreamUsersRequest {
  int32 page_size = 1;
  int32 page_number = 2;
}

message UserResponse {
  User user = 1;
}

message GetAllUsersRequest {
  int32 page_size = 1;
  int32 page_number = 2;
}

message GetAllUsersResponse {
  repeated User users = 1;
  int32 total_count = 2;
  bool success = 3;
  string message = 4;
}